k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: geonodes
  name: geonodes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geonodes
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: geonodes
    spec:
      containers:
        - name: geonodes
          image: fstanczyk/geonodes.io:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: geonodes-api
  name: geonodes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geonodes-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: backend
        app: geonodes-api
    spec:
      containers:
        - name: geonodes-api
          image: fstanczyk/geonodes-web:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8001
