k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: geonodes
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  selector:
    app: geonodes

---

apiVersion: v1
kind: Service
metadata:
  name: geonodes-backend
spec:
  type: ClusterIP
  ports:
  - port: 8001
    name: http
    protocol: TCP
  selector:
    app: geonodes-backend
    tier: backend
